# mcp-spotify-player

./: .gitignore  CLAUDE_INTEGRATION.md  CONFIGURACION_CURSOR.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  check_auth.py  check_server.py  claude-desktop-config.json  env  env.example  improved-readme.md  main.py  mcp-spotify-player.yaml  pyproject.toml  requirements.txt  start_mcp_server.py  start_server.py  test_add_tracks_to_playlist.py  test_clear_playlist.py  test_config_scopes.py  test_execute_tool_dispatch.py  test_manifest_load.py  test_mcp_auth.py  test_play_music.py  test_search_simple.py  tokens.json.old
.github/: settings.yml
src/: __init__.py  client_auth.py  client_playback.py  client_playlists.py  config.py  mcp_manifest.py  mcp_models.py  mcp_server.py  mcp_stdio_server.py  playback_controller.py  playlist_controller.py  spotify_client.py  spotify_controller.py
tests/: __init__.py  conftest.py  test_check_saved_albums_controller.py  test_check_saved_albums_manifest.py  test_clear_playlist.py  test_config_scopes.py  test_create_playlist_manifest.py  test_delete_saved_albums.py  test_diagnose_tool.py  test_error_mapping.py  test_execute_tool_dispatch.py  test_get_album_controller.py  test_get_album_manifest.py  test_get_album_tracks_controller.py  test_get_album_tracks_manifest.py  test_get_albums_controller.py  test_get_albums_manifest.py  test_get_artist_albums_controller.py  test_get_artist_albums_manifest.py  test_get_artist_controller.py  test_get_artist_manifest.py  test_get_artist_related_artists_controller.py  test_get_devices_controller.py  (+19 more)
(+31 files in other folders)
