[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-spotify-player"
version = "0.1.0"
description = "Control your Spotify music from Claude using the MCP protocol"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Victor Sáez"}]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.4.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "httpx>=0.25.0",
]

[project.scripts]
"mcp-spotify-player" = "mcp_spotify_player.cli:main"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
exclude = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "UP006", "UP035", "I001"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
